--- a/frontend/src/styles/product-card.scss
+++ b/frontend/src/styles/product-card.scss
@@ -2,19 +2,26 @@
 	border-radius: 4px;
 	padding: 1.2em;
 	padding-bottom: 4em;
-	// outline: 0.01px solid $primary;
-	box-shadow: 0px 5px 12px 3px rgba(0, 0, 0, 0.2);
 	background: white;
 	margin-bottom: 2em;
-
 	color: $primary;
 	position: relative;
+
+	img {
+		width: 100%;
+		height: 100%;
+	}
+	.img-wrap {
+		height: 100px;
+		width: 100px;
+		margin: auto;
+	}
+
 	h5 {
 		margin-bottom: 1em;
 	}
 
 	.book-service-btn {
-		outline: 1px solid $secondary;
 		border: none;
 		background: white;
 		padding: 6px 12px;
@@ -37,48 +44,13 @@
 	}
 
 	&:hover {
-		box-shadow: 0px 5px 12px 3px rgba(0, 0, 0, 0.35);
+		animation: headShake;
+		animation-duration: 1.9s;
+		box-shadow: 0px 5px 12px 3px rgba(0, 0, 0, 0.2);
+		transition-duration: 0.5s;
 	}
 
 	@media screen and (min-width: 992px) {
 		margin-bottom: 0;
-	}
-}
-
-.book-service {
-	// border: 1px solid red;
-	min-height: 100vh;
-	width: 100%;
-	background: rgba(22, 42, 62, 0.7);
-
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 2;
-
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	&-inner {
-		background: white;
-		padding: 2em;
-		padding-right: 4em;
-		width: 60%;
-		height: 60%;
-
-		input,
-		textarea {
-			all: unset;
-			display: block;
-			width: 100%;
-			margin-bottom: 1em;
-			border: 1px solid $primary;
-			padding-left: 1.5em;
-		}
-		input {
-			height: 40px;
-		}
 	}
 }
